# rusty-gb

./: .gitignore  Cargo.toml  README.md  coverage.sh  rusty_gb.html
.github/workflows/: build.yml  code-coverage.yml
src/: cpu.rs  instructions.rs  lib.rs  main.rs  ppu.rs  registers.rs  tags
src/cpu/: cpu_registers.rs  instruction_cycle_table.rs  instructions.rs  ppu.rs  registers.rs  test_cpu.rs
src/cpu/ppu/: ppu_registers.rs
