[package]
name = "rusty-gb"
version = "0.1.0"
authors = ["Garrett-Fechter <garrett.fechter@gmail.com>"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO - dynamic feature decreases compile time but should be removed before release
winit = "0.26"
pixels = "0.9.0"
rand = "0.8"
winit_input_helper = "0.12.0"
